--- a/.github/workflows/测试.yml
+++ b/.github/workflows/测试.yml
@@ -31,6 +31,17 @@ jobs:
         TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
         TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
 
+    - name: Compile the firmware
+      id: compile
+      run: |
+        cd /home
+        sudo wget https://downloads.openwrt.org/snapshots/targets/armvirt/64/openwrt-sdk-armvirt-64_gcc-8.4.0_musl.Linux-x86_64.tar.xz
+        sudo tar -xvJf *.tar.xz
+        cd openwrt-sdk-armvirt-64_gcc-8.4.0_musl.Linux-x86_64
+        sudo git clone https://github.com/bin20088/luci-app-koolproxy.git package/luci-app-koolproxy
+        sudo make package/luci-app-koolproxy/compile V=99
+        sudo mv bin /home/bin
+
     - name: Upload bin directory
       uses: actions/upload-artifact@main
       with:
