--- a/.github/workflows/测试.yml
+++ b/.github/workflows/测试.yml
@@ -24,6 +24,14 @@ jobs:
     - name: Checkout
       uses: actions/checkout@main
 
+    - name: origan
+      run: |
+        cd /home
+        sudo wget https://downloads.openwrt.org/snapshots/targets/armvirt/64/openwrt-sdk-armvirt-64_gcc-8.4.0_musl.Linux-x86_64.tar.xz
+        sudo tar -xvJf *.tar.xz
+        cd openwrt-sdk-armvirt-64_gcc-8.4.0_musl.Linux-x86_64
+        sudo git clone https://github.com/bin20088/luci-app-koolproxy.git package/luci-app-koolproxy
+
     - name: SSH connection to Actions
       uses: P3TERX/ssh2actions@v1.0.0
       if: (github.event.inputs.ssh == 'true' && github.event.inputs.ssh  != 'false') || contains(github.event.action, 'sshcs')
@@ -31,14 +39,9 @@ jobs:
         TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
         TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
 
-    - name: Compile the firmware
-      id: compile
+    - name: compile
       run: |
-        cd /home
-        sudo wget https://downloads.openwrt.org/snapshots/targets/armvirt/64/openwrt-sdk-armvirt-64_gcc-8.4.0_musl.Linux-x86_64.tar.xz
-        sudo tar -xvJf *.tar.xz
-        cd openwrt-sdk-armvirt-64_gcc-8.4.0_musl.Linux-x86_64
-        sudo git clone https://github.com/bin20088/luci-app-koolproxy.git package/luci-app-koolproxy
+        cd /home/openwrt-sdk-armvirt-64_gcc-8.4.0_musl.Linux-x86_64
         sudo make package/luci-app-koolproxy/compile V=99
         sudo mv bin /home/bin
 
@@ -49,5 +52,4 @@ jobs:
         path: /home/bin
 
     - name: WeChat notification
-      if: steps.compile.outputs.status == 'success' && !cancelled()
       run: curl https://sc.ftqq.com/${{ secrets.ServerChan }}.send?text=${{ env.FILE_NAME }}编译结束
