--- a/.github/workflows/测试.yml
+++ b/.github/workflows/测试.yml
@@ -28,7 +28,8 @@ jobs:
       run: |
         cd /home
         sudo wget https://downloads.openwrt.org/snapshots/targets/armvirt/64/openwrt-sdk-armvirt-64_gcc-8.4.0_musl.Linux-x86_64.tar.xz
-        sudo tar -xvJf *.tar.xz
+        sudo xz -d *.tar.xz
+        sudo tar xvf *.tar
         cd openwrt-sdk-armvirt-64_gcc-8.4.0_musl.Linux-x86_64
         git clone https://github.com/wlfit80/luci-app-koolproxyR.git package/luci-app-koolproxyR
 
