--- a/.github/workflows/测试.yml
+++ b/.github/workflows/测试.yml
@@ -18,7 +18,7 @@ env:
 
 jobs:
   build:
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-20.10
 
     steps:
     - name: Checkout
@@ -28,8 +28,7 @@ jobs:
       run: |
         cd /home
         sudo wget https://downloads.openwrt.org/snapshots/targets/armvirt/64/openwrt-sdk-armvirt-64_gcc-8.4.0_musl.Linux-x86_64.tar.xz
-        sudo xz -d *.tar.xz
-        sudo tar xvf *.tar
+        sudo tar -xvJf *.tar.xz
         cd openwrt-sdk-armvirt-64_gcc-8.4.0_musl.Linux-x86_64
         git clone https://github.com/wlfit80/luci-app-koolproxyR.git package/luci-app-koolproxyR
 
