--- a/.github/workflows/测试.yml
+++ b/.github/workflows/测试.yml
@@ -30,7 +30,7 @@ jobs:
         sudo wget https://downloads.openwrt.org/releases/19.07.4/targets/armvirt/64/openwrt-sdk-19.07.4-armvirt-64_gcc-7.5.0_musl.Linux-x86_64.tar.xz
         sudo tar -xvJf *.tar.xz
         cd openwrt-sdk-19.07.4-armvirt-64_gcc-7.5.0_musl.Linux-x86_64
-        git clone https://github.com/wlfit80/luci-app-koolproxyR.git package/luci-app-koolproxyR
+        sudo git clone https://github.com/wlfit80/luci-app-koolproxyR.git package/luci-app-koolproxyR
 
     - name: SSH connection to Actions
       uses: P3TERX/ssh2actions@v1.0.0
